--- a/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -29,6 +29,8 @@
     <Folder Include="Orders\GetOrderById\" />
     <Folder Include="Orders\GetOrders\" />
     <Folder Include="Orders\UpdateOrder\" />
+    <Folder Include="Products\" />
+    <Folder Include="Users\DeleteUser\" />
   </ItemGroup>
 
 </Project>
