--- a/CleanArchitecture/appsettings.json
+++ b/CleanArchitecture/appsettings.json
@@ -10,6 +10,6 @@
     "Audience": "api"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Uid=sa;password=12345;Initial Catalog=TestCA4;Integrated Security=true;MultipleActiveResultSets=True;Encrypt=False"
+    "DefaultConnection": "Server=(local);Initial Catalog=TestCA4;Integrated Security=true;MultipleActiveResultSets=True;Encrypt=False"
   }
 }
